2002-10-18 Erwann Chenede - <erwann.chenede@sun.com>

        * gnome-settings-keybindings.c
	(screen_exec_display_string) : added function to get display 
				       string from an XEvent.
        (keybindings_filter) : set a fully qualified DISPLAY env variable
			       when spawing a keybinding action.

2002-10-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=91535
	* gnome-settings-sound.c : as michael points out it is silly to start
	  the daemon just so that we can stop it.  Dunno much about esound
	  code so the funky logic is left untouched.

2002-10-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=95179
	* gnome-settings-accessibility-keyboard.c
	(gnome_settings_accessibility_keyboard_init) : do nothing here.
	(gnome_settings_accessibility_keyboard_load) : install the filter
	  here, _after_ loading the gconf settings.
	(set_gconf_from_server) : check to see if anything has actually
	  changed before sending off the changeset.

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

Tue Sep 24 15:47:29 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	disable/enable preedit/status in GtkIMContextXIM (#59076)
	
	* gnome-settings-xsettings.c: added two new xsettings
	for GTK+ input method preedit and status styles.

	With the other patch for gtk+, the preedit and status styles of
	GTK+ input method are configurable with associated gconf schemas
	keys:
	"/desktop/gnome/interface/gtk-im-preedit-style"
	"/desktop/gnome/interface/gtk-im-status-style"

	Both are set to "callback" by default, and platform's 
	packging can have different default by changing
	libgnome's desktop_gnome_interface.schemas.

2002-09-11  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  set the timeout options fully.

2002-09-10  Jody Goldberg <jody@gnome.org>

	* gnome-settings-wm.c (gnome_settings_wm_load) : protect against NULL.
