@@ -1,3 +1,7 @@
+2002-10-20  Mark McLoughlin  <mark@skynet.ie>
+
+	* factory.c: (main): don't connect to the session manager.
+
 2002-10-18 Erwann Chenede - <erwann.chenede@sun.com>
 
         * gnome-settings-keybindings.c
